--- a/index.html
+++ b/index.html
@@ -1,135 +1,1 @@
-<!DOCTYPE html>
-<html class="page" lang="ru">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css">
-  <title>Potrfolio</title>
-</head>
-
-<body class="page-body">
-  <div class="container">
-    <header class="page-header">
-      <nav class="main-nav">
-        <div class="main-nav__wrapper">
-          <picture>
-            <source srcset="img/dipper.webp" type="image/webp"><img class="main-nav__image" src="img/dipper.jpg"
-              width="250" height="250" alt="Dipper">
-          </picture>
-          <h1 class="main-nav__title">Сальников Сергей</h1>
-          <ul class="menu-list">
-            <li class="menu-list__item">
-              <a class="menu-list__link  menu-list__link--git" href="https://github.com/InLas">GitHub</a>
-            </li>
-            <li class="menu-list__item">
-              <a class="menu-list__link  menu-list__link--mail" href="mailto:inlas645@mail.ru">inlas645@mail.ru</a>
-            </li>
-            <li class="menu-list__item">
-              <a class="menu-list__link  menu-list__link--phone" href="tel:89255668953">+7(925)566-89-53</a>
-            </li>
-            <li class="menu-list__item">
-              <a class="menu-list__link  menu-list__link--resume"
-                href="https://hh.ru/applicant/resumes/view?resume=39a552aaff07297e170039ed1f446366484d7a">Резюме</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
-    <main>
-      <section class="content">
-        <div class="content__wrapper">
-          <h2 class="content__title">Привет! <br>
-            Здесь представлены некоторые мои проекты при обучении вёрстке сайтов.
-          </h2>
-          <ul class="projects">
-            <li class="projects__item">
-              <picture>
-                <source srcset="img/test_oblako_group.webp" type="image/webp"><img src="img/test_oblako_group.png"
-                  alt="test_oblako_group" class="projects__images" width="250" height="400">
-              </picture>
-              <div class="projects__description">
-                <p class="project__text">Тренировочный макет UI. С адаптивом: desktop, mobile.</p>
-                <a href="https://inlas.github.io/test_oblako_group/test_oblako_group"
-                  class="projects__link">Просмотр</a>
-              </div>
-            </li>
-            <li class="projects__item">
-              <picture>
-                <source srcset="img/hungry-people.webp" type="image/webp"><img src="img/hungry-people.png"
-                  alt="hungry-people" class="projects__images" width="250" height="400">
-              </picture>
-              <div class="projects__description">
-                <p class="project__text">Тренировочный макет. С адаптивом: desktop, tablet, mobile.</p>
-                <a href="https://inlas.github.io/Hungry-People/Hungry-People" class="projects__link">Просмотр</a>
-              </div>
-            </li>
-            <li class="projects__item">
-              <picture>
-                <source srcset="img/landing_page.webp" type="image/webp"><img src="img/landing_page.png"
-                  alt="landing_page" class="projects__images" width="250" height="400">
-              </picture>
-              <div class="projects__description">
-                <p class="project__text">Тренировочный макет. С адаптивом: desktop, tablet, mobile.</p>
-                <a href="https://inlas.github.io/Landing_page/Landing_page" class="projects__link">Просмотр</a>
-              </div>
-            </li>
-            <li class="projects__item">
-              <picture>
-                <source srcset="img/lian.webp" type="image/webp"><img src="img/lian.png" alt="lian"
-                  class="projects__images" width="250" height="400">
-              </picture>
-              <div class="projects__description">
-                <p class="project__text">Тренировочный макет. С адаптивом: desktop, tablet, mobile.</p>
-                <a href="https://inlas.github.io/Lian/Lian" class="projects__link">Просмотр</a>
-              </div>
-            </li>
-            <li class="projects__item">
-              <picture>
-                <source srcset="img/sedona.webp" type="image/webp"><img src="img/sedona.png" alt="sedona"
-                  class="projects__images" width="250" height="400">
-              </picture>
-              <div class="projects__description">
-                <p class="project__text">Тренировочный макет. С адаптивом: desktop, tablet, mobile.</p>
-                <a href="https://inlas.github.io/Sedona/Sedona" class="projects__link">Просмотр</a>
-              </div>
-            </li>
-            <li class="projects__item">
-              <picture>
-                <source srcset="img/pink.webp" type="image/webp"><img src="img/pink.png" alt="pink"
-                  class="projects__images" width="250" height="400">
-              </picture>
-              <div class="projects__description">
-                <p class="project__text">Тренировочный макет. С адаптивом: desktop, tablet, mobile.</p>
-                <a href="https://inlas.github.io/Pink/pink" class="projects__link">Просмотр</a>
-              </div>
-            </li>
-            <li class="projects__item">
-              <picture>
-                <source srcset="img/texnomart.webp" type="image/webp"><img src="img/texnomart.png" alt="texnomart"
-                  class="projects__images" width="250" height="400">
-              </picture>
-              <div class="projects__description">
-                <p class="project__text">Тренировочный макет. Без адаптива.</p>
-                <a href="https://inlas.github.io/texnomart/" class="projects__link">Просмотр</a>
-              </div>
-            </li>
-            <li class="projects__item">
-              <picture>
-                <source srcset="img/nerds.webp" type="image/webp"><img src="img/nerds.png" alt="nerds"
-                  class="projects__images" width="250" height="400">
-              </picture>
-              <div class="projects__description">
-                <p class="project__text">Тренировочный макет. Без адаптива.</p>
-                <a href="https://inlas.github.io/nerds/" class="projects__link">Просмотр</a>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </section>
-    </main>
-  </div>
-  <script src="js/script.min.js"></script>
-</body>
-
-</html>
+<!DOCTYPE html><html class="page" lang="ru"><head>  <meta charset="UTF-8">  <meta name="viewport" content="width=device-width, initial-scale=1.0">  <link rel="stylesheet" href="css/style.min.css">  <title>Potrfolio</title></head><body class="page-body">  <div class="container">    <header class="page-header">  <nav class="main-nav">    <div class="main-nav__wrapper">      <picture><source srcset="img/me.webp" type="image/webp"><img class="main-nav__image" src="img/me.jpg" width="250" height="250" alt="Me"></picture>      <h1 class="main-nav__title">Сальников Сергей</h1>      <ul class="menu-list">        <li class="menu-list__item">          <a class="menu-list__link  menu-list__link--git" href="https://github.com/InLas">GitHub</a>        </li>        <li class="menu-list__item">          <a class="menu-list__link  menu-list__link--mail" href="mailto:inlas645@mail.ru">inlas645@mail.ru</a>        </li>        <li class="menu-list__item">          <a class="menu-list__link  menu-list__link--phone" href="tel:89255668953">+7(925)566-89-53</a>        </li>        <li class="menu-list__item">          <a class="menu-list__link  menu-list__link--resume"            href="https://hh.ru/applicant/resumes/view?resume=39a552aaff07297e170039ed1f446366484d7a">Резюме</a>        </li>      </ul>    </div>  </nav></header>    <main>      <section class="content">  <div class="content__wrapper">    <h2 class="content__title">Привет! <br>      Здесь представлены некоторые мои проекты при обучении вёрстке сайтов.    </h2>    <ul class="projects">      <li class="projects__item">        <picture><source srcset="img/The_LOOP.webp" type="image/webp"><img src="img/The_LOOP.png" alt="The_LOOP" class="projects__images" width="250" height="400"></picture>        <div class="projects__description">          <p class="project__text">Тренировочный макет. С адаптивом: desktop, tablet, mobile.</p>          <a href="https://inlas.github.io/The_LOOP/The_LOOP" class="projects__link">Просмотр</a>        </div>      </li>      <li class="projects__item">        <picture><source srcset="img/test_oblako_group.webp" type="image/webp"><img src="img/test_oblako_group.png" alt="test_oblako_group" class="projects__images" width="250" height="400"></picture>        <div class="projects__description">          <p class="project__text">Тренировочный макет UI. С адаптивом: desktop, mobile.</p>          <a href="https://inlas.github.io/test_oblako_group/test_oblako_group" class="projects__link">Просмотр</a>        </div>      </li>      <li class="projects__item">        <picture><source srcset="img/hungry-people.webp" type="image/webp"><img src="img/hungry-people.png" alt="hungry-people" class="projects__images" width="250" height="400"></picture>        <div class="projects__description">          <p class="project__text">Тренировочный макет. С адаптивом: desktop, tablet, mobile.</p>          <a href="https://inlas.github.io/Hungry-People/Hungry-People" class="projects__link">Просмотр</a>        </div>      </li>      <li class="projects__item">        <picture><source srcset="img/landing_page.webp" type="image/webp"><img src="img/landing_page.png" alt="landing_page" class="projects__images" width="250" height="400"></picture>        <div class="projects__description">          <p class="project__text">Тренировочный макет. С адаптивом: desktop, tablet, mobile.</p>          <a href="https://inlas.github.io/Landing_page/Landing_page" class="projects__link">Просмотр</a>        </div>      </li>      <li class="projects__item">        <picture><source srcset="img/lian.webp" type="image/webp"><img src="img/lian.png" alt="lian" class="projects__images" width="250" height="400"></picture>        <div class="projects__description">          <p class="project__text">Тренировочный макет. С адаптивом: desktop, tablet, mobile.</p>          <a href="https://inlas.github.io/Lian/Lian" class="projects__link">Просмотр</a>        </div>      </li>      <li class="projects__item">        <picture><source srcset="img/sedona.webp" type="image/webp"><img src="img/sedona.png" alt="sedona" class="projects__images" width="250" height="400"></picture>        <div class="projects__description">          <p class="project__text">Тренировочный макет. С адаптивом: desktop, tablet, mobile.</p>          <a href="https://inlas.github.io/Sedona/Sedona" class="projects__link">Просмотр</a>        </div>      </li>      <li class="projects__item">        <picture><source srcset="img/pink.webp" type="image/webp"><img src="img/pink.png" alt="pink" class="projects__images" width="250" height="400"></picture>        <div class="projects__description">          <p class="project__text">Тренировочный макет. С адаптивом: desktop, tablet, mobile.</p>          <a href="https://inlas.github.io/Pink/pink" class="projects__link">Просмотр</a>        </div>      </li>      <li class="projects__item">        <picture><source srcset="img/texnomart.webp" type="image/webp"><img src="img/texnomart.png" alt="texnomart" class="projects__images" width="250" height="400"></picture>        <div class="projects__description">          <p class="project__text">Тренировочный макет. Без адаптива.</p>          <a href="https://inlas.github.io/texnomart/" class="projects__link">Просмотр</a>        </div>      </li>      <li class="projects__item">        <picture><source srcset="img/nerds.webp" type="image/webp"><img src="img/nerds.png" alt="nerds" class="projects__images" width="250" height="400"></picture>        <div class="projects__description">          <p class="project__text">Тренировочный макет. Без адаптива.</p>          <a href="https://inlas.github.io/nerds/" class="projects__link">Просмотр</a>        </div>      </li>    </ul>  </div></section>    </main>  </div>  <script src="js/script.min.js"></script></body></html>
